# docs/openapi/remote-refs.yaml
@@ -20,3 +20,11 @@ components:
       $ref: 'https://raw.githubusercontent.com/pagopa/pn-auth-fleet/b74db2aba34f1586512f370380c7e13215644b21/docs/openapi/authenticationParameters-v1.yaml#/components/parameters/uidAuthFleet'
     headerSourceChannel:
       $ref: 'https://raw.githubusercontent.com/pagopa/pn-auth-fleet/7a5a725180434b8ad057660602ffe0bd86462132/docs/openapi/authenticationParameters-v1.yaml#/components/parameters/headerSourceChannel'
+    # TODO: sostituire con $ref a repository remoto quando disponibile, allineandosi al pattern degli altri parametri sopra
+    headerBaseUrl:
+      name: x-pagopa-pn-base-url
+      in: header
+      description: Base URL pubblico da cui la richiesta è stata ricevuta, valorizzato dall'infrastruttura.
+      required: false
+      schema:
+        type: string
