# src/main/java/it/pagopa/pn/radd/rest/radd/fsu/ActPrivateRestV1Controller.java
@@ -3,6 +3,7 @@ package it.pagopa.pn.radd.rest.radd.fsu;
 import it.pagopa.pn.radd.alt.generated.openapi.server.v1.api.ActOperationsApi;
 import it.pagopa.pn.radd.alt.generated.openapi.server.v1.dto.*;
 import it.pagopa.pn.radd.services.radd.fsu.v1.ActService;
+import it.pagopa.pn.radd.utils.Utils;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -26,9 +27,10 @@ public class ActPrivateRestV1Controller implements ActOperationsApi {
     }
 
     @Override
-    public Mono<ResponseEntity<StartTransactionResponse>> startActTransaction(String uid, CxTypeAuthFleet xPagopaPnCxType, String xPagopaPnCxId, String xPagopaPnSrcCh, Mono<ActStartTransactionRequest> actStartTransactionRequest, String xPagopaPnCxRole, ServerWebExchange exchange) {
-        return actStartTransactionRequest
-                .zipWhen(request -> actService.startTransaction(uid, xPagopaPnCxId, xPagopaPnCxType, xPagopaPnCxRole, xPagopaPnSrcCh, null, request), (req, resp) -> resp)
+    public Mono<ResponseEntity<StartTransactionResponse>> startActTransaction(String uid, CxTypeAuthFleet xPagopaPnCxType, String xPagopaPnCxId, String xPagopaPnSrcCh, Mono<ActStartTransactionRequest> actStartTransactionRequest, String xPagopaPnCxRole, String xPagopaPnBaseUrl, ServerWebExchange exchange) {
+        return Utils.requireBaseUrl(xPagopaPnBaseUrl)
+                .flatMap(baseUrl -> actStartTransactionRequest
+                .zipWhen(request -> actService.startTransaction(uid, xPagopaPnCxId, xPagopaPnCxType, xPagopaPnCxRole, xPagopaPnSrcCh, baseUrl, request), (req, resp) -> resp))
                 .map(m -> ResponseEntity.status(HttpStatus.OK).body(m));
     }
 
